# Machine-Learning-Model-Deployment

./: README.md
.k8s/base/: kustomization.yaml
.k8s/overlays/dev/: kustomization.yaml  service-project-lb.yaml
.k8s/overlays/prod/: hpa-api.yaml  kustomization.yaml  virtual-service.yaml
mlapi/: .dockerignore  Dockerfile  pyproject.toml  submission-namespace.yaml
mlapi/src/: sentiment_predict.py
