[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitchell Karchemsky",email = "mitch.karchemsky@gmail.com"}
]
package-mode = false
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "fastapi-simple-redis-cache (>=2.0.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
datasets = "^4.8"
scikit-learn = "==1.8.0"
pytest = "^9.0.2"
ruff = "^0.14.11"
pre-commit = "^4.5"
evaluate = "^0.4"
accelerate = "^1.13.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
